update pages style

--- a/admin-table.html
+++ b/admin-table.html
@@ -81,10 +81,9 @@
 <p class="browsehappy">你正在使用<strong>过时</strong>的浏览器，Amaze UI 暂不支持。 请 <a href="http://browsehappy.com/" target="_blank">升级浏览器</a>
   以获得更好的体验！</p>
 <![endif]-->
-<div id="home">
   <header class="am-topbar am-topbar-inverse admin-header" id="heade"></header>
 
-  <div class="am-cf admin-main">
+  <div class="am-cf admin-main" id="home">
     <div class="admin-sidebar am-offcanvas" id="admin-offcanvas"></div>
     <!-- content start -->
     <div class="admin-content">
@@ -360,7 +359,6 @@
     </div>
     <!-- content end -->
   </div>
-</div>
 <a href="#" class="am-icon-btn am-icon-th-list am-show-sm-only admin-menu" data-am-offcanvas="{target: '#admin-offcanvas'}"></a>
 
 
